--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 
 <body>
     
-    <p id="jokeElement">🤣🤣🤣🤣🤣🤣🤣🤣</p>
+     <h5 id="jokeElement">🤣🤣🤣🤣🤣🤣🤣🤣</h5>
     
     <script src="script.js"></script>
 </body>
